--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-A Robot Framework test library for running checks and valdiations on HTML files.
+A [Robot Framework](http://robotframework.org) test library for running checks and valdiations on HTML files.
 
